test quick constraint/color change to parent view

--- a/HornHonkin/Base.lproj/Main.storyboard
+++ b/HornHonkin/Base.lproj/Main.storyboard
@@ -43,47 +43,48 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="toF-kR-ONL">
-                                <rect key="frame" x="144" y="82" width="312" height="177"/>
+                                <rect key="frame" x="0.0" y="78" width="600" height="177"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Color" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Er1-UJ-Dcv">
-                                        <rect key="frame" x="20" y="79" width="100" height="21"/>
+                                        <rect key="frame" x="164" y="79" width="100" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Top Speed" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEX-Mo-b61">
-                                        <rect key="frame" x="20" y="136" width="100" height="21"/>
+                                        <rect key="frame" x="164" y="136" width="100" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="???" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XIw-Dg-oih">
-                                        <rect key="frame" x="192" y="136" width="100" height="21"/>
+                                        <rect key="frame" x="336" y="136" width="100" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Brand" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pv9-PA-ljc">
-                                        <rect key="frame" x="20" y="20" width="100" height="21"/>
+                                        <rect key="frame" x="164" y="20" width="100" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="???" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVj-hp-gdY">
-                                        <rect key="frame" x="192" y="79" width="100" height="21"/>
+                                        <rect key="frame" x="336" y="79" width="100" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="???" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSZ-E5-JOD">
-                                        <rect key="frame" x="192" y="20" width="100" height="21"/>
+                                        <rect key="frame" x="336" y="20" width="100" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <color key="backgroundColor" red="0.35294117650000001" green="0.73333333329999995" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="312" id="TwY-8D-oiK"/>
+                                    <constraint firstAttribute="width" constant="600" id="TwY-8D-oiK"/>
                                     <constraint firstAttribute="height" constant="177" id="lGq-KS-3gs"/>
                                 </constraints>
                             </view>
@@ -112,11 +113,11 @@
                             <constraint firstAttribute="trailingMargin" secondItem="DC3-5g-xSR" secondAttribute="trailing" constant="-16" id="Umq-Uu-BOo"/>
                             <constraint firstItem="DC3-5g-xSR" firstAttribute="top" secondItem="Z3e-bU-0kg" secondAttribute="bottom" constant="25" id="aJ9-HP-KuB"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="DC3-5g-xSR" secondAttribute="bottom" id="fY8-SA-JME"/>
-                            <constraint firstItem="toF-kR-ONL" firstAttribute="top" secondItem="K2r-8U-4QI" secondAttribute="bottom" constant="3" id="jbB-wj-Mct"/>
-                            <constraint firstItem="toF-kR-ONL" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="62" id="mPp-U1-Bag"/>
+                            <constraint firstItem="toF-kR-ONL" firstAttribute="top" secondItem="K2r-8U-4QI" secondAttribute="bottom" constant="-1" id="jbB-wj-Mct"/>
+                            <constraint firstItem="toF-kR-ONL" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="58" id="mPp-U1-Bag"/>
                             <constraint firstAttribute="trailing" secondItem="K2r-8U-4QI" secondAttribute="trailing" id="oC8-lN-DtN"/>
                             <constraint firstAttribute="centerX" secondItem="toF-kR-ONL" secondAttribute="centerX" id="pp9-pH-xSe"/>
-                            <constraint firstItem="8cc-Sx-cLs" firstAttribute="top" secondItem="toF-kR-ONL" secondAttribute="bottom" constant="8" id="rcz-aU-dxU"/>
+                            <constraint firstItem="8cc-Sx-cLs" firstAttribute="top" secondItem="toF-kR-ONL" secondAttribute="bottom" constant="12" id="rcz-aU-dxU"/>
                             <constraint firstAttribute="centerX" secondItem="toF-kR-ONL" secondAttribute="centerX" id="y1g-dn-kSD"/>
                         </constraints>
                     </view>
